usuario quase pronto, falta a parte da privacidade e realizar mais testes

--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -35,7 +35,7 @@
                                         <div class="item-inner">
                                             <div class="item-title label">Nome</div>
                                             <div class="item-input">
-                                                <input type="text" name="usuNome" id="usuNome" placeholder="Nome" value="Kevin Minion" disabled>
+                                                <input type="text" name="usuNome" id="usuNome" placeholder="Nome" disabled>
                                             </div>
                                         </div>
                                     </div>
@@ -46,7 +46,7 @@
                                         <div class="item-inner">
                                             <div class="item-title label">E-mail</div>
                                             <div class="item-input">
-                                                <input type="email" name="usuEmail" id="usuEmail" placeholder="E-mail" value="kevin.minion@gmail.com" disabled>
+                                                <input type="email" name="usuEmail" id="usuEmail" placeholder="E-mail" disabled>
                                             </div>
                                         </div>
                                     </div>
@@ -119,7 +119,7 @@
                                             <div class="item-inner">
                                                 <div class="item-title label">CEP</div>
                                                 <div class="item-input">
-                                                    <input type="number" name="usuCep" id="usuCep" placeholder="00000-000">
+                                                    <input type="number" name="endCep" id="endCep" placeholder="00000-000">
                                                 </div>
                                             </div>
                                         </div>
