usuario versao alfa 0

--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -199,7 +199,7 @@
                             <ul>
                                 <li>
                                     <label class="label-checkbox item-content">
-                                      <input type="checkbox" name="usuTelefoneVisivel" value="true" checked="checked">
+                                      <input type="checkbox" name="usuTelefoneVisivel" id="usuTelefoneVisivel"  value="true">
                                       <div class="item-media">
                                           <i class="icon icon-form-checkbox"></i>
                                       </div>
@@ -216,7 +216,7 @@
                             <ul>
                                 <li>
                                     <label class="label-checkbox item-content">
-                                    <input type="checkbox" name="usuEndVisivel" value="true" checked="checked">
+                                    <input type="checkbox" name="usuEndVisivel" id="usuEndVisivel" value="true">
                                     <div class="item-media">
                                         <i class="icon icon-form-checkbox"></i>
                                     </div>
