Transformado Localizacao.js em classe, resolvido diversos bugs na classe Localizacao, mostrando mapa na oferta, usuario ainda nao migrada para o novo tipo de localizacao

--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -7,7 +7,8 @@ img {
     height: 0 !important;
 }
 
-#mapCanvas{
+/*ALTERADO PARA CLASSE PARA UTILIZAR EM MAIS DE UM LUGAR NA APLICAÇÃO*/
+.canvasMapa{
   width: 100%;
   height: 350px;
 }
