--- a/hortapp/www/views/oferta/novaOferta.html
+++ b/hortapp/www/views/oferta/novaOferta.html
@@ -83,13 +83,17 @@
                         </div>
                     </div>
 
-                    <!-- <div class="content-block"> -->
+                    <div class="content-block">
+
                         <div class="row hide mapaOferta">
                             <div class="row col-100 pesquisarLocalizacaoOferta">
                                 <a href="#" class="button col-50" id="btnPesquisarLocalizacaoOferta"><i class="fa fa-search" aria-hidden="true"></i>&nbspPesquisar localização</a>
                                 <a href="#" class="button col-50" id="btnLocalizacaoAtualOferta"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbspLocalização Atual</a>
                             </div>
-                            <div class="row" id="mapCanvasOferta"></div>
+
+                            <div class="canvasMapa" id="mapCanvasOferta"></div>
+                            <div class="color-blue" id="oftLocalizacao"></div>
+
                         </div>
 
                         <div class="row content-block divisorOferta animated zoomIn">
@@ -101,7 +105,9 @@
                                 <hr>
                             </div>
                         </div>
-                    <!-- </div> -->
+
+                    </div>
+
                     <div class="enderecoOferta animated fadeInRight">
                         <ul>
                             <li>
