--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -97,7 +97,7 @@
                                         <a href="#" class="button col-50" id="btnPesquisarLocalizacao"><i class="fa fa-search" aria-hidden="true"></i>&nbspPesquisar localização</a>
                                         <a href="#" class="button col-50" id="btnLocalizacaoAtual"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbspLocalização Atual</a>
                                     </div>
-                                    <div id="mapCanvas"></div>
+                                    <div  class="canvasMapa" id="mapCanvas"></div>
                                     <div class="usuLocalizacao color-blue">
                                     </div>
                                 </div>
