Classe Localizacao concluida e testada. usuarioController e ofertaController utilizando classe Localizacao.

--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -98,8 +98,7 @@
                                         <a href="#" class="button col-50" id="btnLocalizacaoAtual"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbspLocalização Atual</a>
                                     </div>
                                     <div  class="canvasMapa" id="mapCanvas"></div>
-                                    <div class="usuLocalizacao color-blue">
-                                    </div>
+                                    <div class="usuLocalizacao color-blue" id="usuLocalizacao"></div>
                                 </div>
 
                                 <div class="row content-block divisor animated zoomIn">
