--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -7,15 +7,25 @@ img {
     height: 0 !important;
 }
 
+
 /*ALTERADO PARA CLASSE PARA UTILIZAR EM MAIS DE UM LUGAR NA APLICAÇÃO*/
-.canvasMapa{
-  width: 100%;
-  height: 350px;
+
+.canvasMapa {
+    width: 100%;
+    height: 350px;
 }
 
-.pesquisarLocalizacao{
-  padding-bottom: 10px !important;
+.fotoOferta {
+    width: 250px;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
 }
+
+.pesquisarLocalizacao {
+    padding-bottom: 10px !important;
+}
+
 
 /*#logoLogin img {
     max-width: 100%;
