--- a/hortapp/www/views/oferta/novaOferta.html
+++ b/hortapp/www/views/oferta/novaOferta.html
@@ -37,7 +37,7 @@
                         <div class="item-inner">
                             <div class="item-title label">Quantidade</div>
                             <div class="item-input">
-                                <input type="number" min="1" pattern="^\d*[0-9](\.\d*[0-9])?$" placeholder="Quantidade">
+                                <input type="number" min="1" name="oftQuantidade" id="oftQuantidade" pattern="^\d*[0-9](\.\d*[0-9])?$" placeholder="Quantidade">
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,19 @@
                         <div class="item-inner">
                             <div class="item-title label">Valor</div>
                             <div class="item-input">
-                                <input type="number" min="0" pattern="^\d*[0-9](\.\d*[0-9])?$" placeholder="Valor">
+                                <input type="number" min="0" name="oftValor" id="oftValor" pattern="^\d*[0-9](\.\d*[0-9])?$" placeholder="Valor">
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="item-content">
+                        <!-- <div class="item-media"><i class="icon icon-form-email"></i></div> -->
+                        <div class="item-inner">
+                            <!-- <div class="item-title label">Foto</div> -->
+                            <div class="item-input">
+                                <a href="#" class="button" id="btnTirarFoto"><i class="fa fa-camera-retro" aria-hidden="true"></i>&nbspTirar Foto</a>
+                                <img id="fotoOferta" />
                             </div>
                         </div>
                     </div>
@@ -66,120 +78,153 @@
                             </div>
                         </div>
                     </div>
-                </li>
 
-                <!-- DIV COM CONTEUDO DO ENDEREÇO PROPRIO -->
-                <div class="content-block hide enderecoProprio">
+                    <!-- DIV COM CONTEUDO DO ENDEREÇO PROPRIO -->
+                    <div class="content-block hide enderecoProprio">
 
-                    <div class="item-content">
-                        <div class="item-inner semBorda">
-                            <div class="item-title label">Usar GPS</div>
-                            <div class="item-input">
-                                <label class="label-switch">
+                        <div class="item-content">
+                            <div class="item-inner semBorda">
+                                <div class="item-title label">Usar GPS</div>
+                                <div class="item-input">
+                                    <label class="label-switch">
                                 <input type="checkbox" nome="oftLocalizacaoAtual" id="oftLocalizacaoAtual">
                                 <div class="checkbox"></div>
                               </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="content-block">
-
-                        <div class="row hide mapaOferta">
-                            <div class="row col-100 pesquisarLocalizacaoOferta">
-                                <a href="#" class="button col-50" id="btnPesquisarLocalizacaoOferta"><i class="fa fa-search" aria-hidden="true"></i>&nbspPesquisar localização</a>
-                                <a href="#" class="button col-50" id="btnLocalizacaoAtualOferta"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbspLocalização Atual</a>
-                            </div>
-
-                            <div class="canvasMapa" id="mapCanvasOferta"></div>
-                            <div class="color-blue" id="oftLocalizacao"></div>
-
-                        </div>
-
-                        <div class="row content-block divisorOferta animated zoomIn">
-                            <div class="col-45">
-                                <hr>
-                            </div>
-                            <div class="col-10 text-center divisor">OU</div>
-                            <div class="col-45">
-                                <hr>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="enderecoOferta animated fadeInRight">
-                        <ul>
-                            <li>
-                                <div class="item-content">
-                                    <div class="item-inner">
-                                        <div class="item-title label">CEP</div>
-                                        <div class="item-input">
-                                            <input type="number" name="endCepOferta" id="endCepOferta" placeholder="00000-000">
-                                        </div>
-                                    </div>
                                 </div>
-                            </li>
-                            <li>
-                                <a href="#" class="item-link smart-select" data-open-in="popup" data-popup-close-text="Voltar" data-back-on-select="true" data-searchbar="true" data-searchbar-placeholder="Pesquisar Estados" data-searchbar-cancel="Cancelar">
-                                    <select name="ufCodigoOferta" id="ufCodigoOferta">
+                            </div>
+                        </div>
 
-                                </select>
+                        <div class="content-block">
+
+                            <div class="row hide mapaOferta">
+                                <div class="row col-100 pesquisarLocalizacaoOferta">
+                                    <a href="#" class="button col-100" id="btnPesquisarLocalizacaoOferta"><i class="fa fa-search" aria-hidden="true"></i>&nbspPesquisar localização</a>
+                                    <a href="#" class="button col-100" id="btnLocalizacaoAtualOferta"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbspLocalização Atual</a>
+                                </div>
+
+                                <div class="canvasMapa" id="mapCanvasOferta"></div>
+                                <div class="color-blue" id="oftLocalizacao"></div>
+
+                            </div>
+
+                            <div class="row content-block divisorOferta animated zoomIn">
+                                <div class="col-45">
+                                    <hr>
+                                </div>
+                                <div class="col-10 text-center divisor">OU</div>
+                                <div class="col-45">
+                                    <hr>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="enderecoOferta animated fadeInRight">
+                            <ul>
+                                <li>
                                     <div class="item-content">
                                         <div class="item-inner">
-                                            <div class="item-title">Estado</div>
-                                            <div class="item-after" id="estadoSelecionadoOferta"></div>
+                                            <div class="item-title label">CEP</div>
+                                            <div class="item-input">
+                                                <input type="number" name="endCepOferta" id="endCepOferta" placeholder="00000-000">
+                                            </div>
                                         </div>
                                     </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="item-link smart-select" data-open-in="popup" data-popup-close-text="Voltar" data-back-on-select="true" data-searchbar="true" data-searchbar-placeholder="Pesquisar Cidades" data-searchbar-cancel="Cancelar">
-                                    <select name="cidCodigoOferta" id="cidCodigoOferta" class="text-capitalize">
+                                </li>
+                                <li>
+                                    <a href="#" class="item-link smart-select" data-open-in="popup" data-popup-close-text="Voltar" data-back-on-select="true" data-searchbar="true" data-searchbar-placeholder="Pesquisar Estados" data-searchbar-cancel="Cancelar">
+                                        <select name="ufCodigoOferta" id="ufCodigoOferta">
 
                                 </select>
+                                        <div class="item-content">
+                                            <div class="item-inner">
+                                                <div class="item-title">Estado</div>
+                                                <div class="item-after" id="estadoSelecionadoOferta"></div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="item-link smart-select" data-open-in="popup" data-popup-close-text="Voltar" data-back-on-select="true" data-searchbar="true" data-searchbar-placeholder="Pesquisar Cidades" data-searchbar-cancel="Cancelar">
+                                        <select name="cidCodigoOferta" id="cidCodigoOferta" class="text-capitalize">
+
+                                </select>
+                                        <div class="item-content">
+                                            <div class="item-inner">
+                                                <div class="item-title">Cidade</div>
+                                                <div class="item-after" id="cidadeSelecionadaOferta"></div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
                                     <div class="item-content">
                                         <div class="item-inner">
-                                            <div class="item-title">Cidade</div>
-                                            <div class="item-after" id="cidadeSelecionadaOferta"></div>
+                                            <div class="item-title label">Bairro</div>
+                                            <div class="item-input">
+                                                <input type="text" name="endBairroOferta" id="endBairroOferta" placeholder="Bairro">
+                                            </div>
                                         </div>
                                     </div>
-                                </a>
-                            </li>
-                            <li>
-                                <div class="item-content">
-                                    <div class="item-inner">
-                                        <div class="item-title label">Bairro</div>
-                                        <div class="item-input">
-                                            <input type="text" name="endBairroOferta" id="endBairroOferta" placeholder="Bairro">
+                                </li>
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-inner">
+                                            <div class="item-title label">Logradouro</div>
+                                            <div class="item-input">
+                                                <input type="text" name="endLogradouroOferta" id="endLogradouroOferta" placeholder="Logradouro">
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="item-content">
-                                    <div class="item-inner">
-                                        <div class="item-title label">Logradouro</div>
-                                        <div class="item-input">
-                                            <input type="text" name="endLogradouroOferta" id="endLogradouroOferta" placeholder="Logradouro">
+                                </li>
+                                <li>
+                                    <div class="item-content">
+                                        <div class="item-inner">
+                                            <div class="item-title label">Número</div>
+                                            <div class="item-input">
+                                                <input type="text" name="endNumeroOferta" id="endNumeroOferta" placeholder="Numero">
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="item-content">
-                                    <div class="item-inner">
-                                        <div class="item-title label">Número</div>
-                                        <div class="item-input">
-                                            <input type="text" name="endNumeroOferta" id="endNumeroOferta" placeholder="Numero">
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
+                </li>
                 <!--FIM DO ENDEREÇO  -->
+                <li>
+
+                    <div class="item-content">
+                        <div class="item-inner">
+                            <div class="item-title label">Data Inicial</div>
+                            <div class="item-input">
+                                <input type="text" placeholder="Selecionar Data" name="oftDataInicial" id="oftDataInicial" readonly>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="item-content">
+                        <div class="item-inner">
+                            <div class="item-title label">Data de vencimento</div>
+                            <div class="item-input">
+                                <input type="text" placeholder="Selecionar Data" name="oftDataFinal" id="oftDataFinal"readonly>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="item-content">
+                        <div class="item-inner">
+                            <div class="item-title label">Observações</div>
+                            <div class="item-input">
+                                <textarea name="oftObs" id="oftObs"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </form>
     </div>
