Enviando nova oferta para servidor local, salvando corretamente o endereco, o item, quantidade. Alterar o tipo de data para AAAA-MM-DD, para salvar no banco. Ainda não está enviando a foto

--- a/hortapp/www/views/oferta/novaOferta.html
+++ b/hortapp/www/views/oferta/novaOferta.html
@@ -37,7 +37,7 @@
                         <div class="item-inner">
                             <div class="item-title label">Quantidade</div>
                             <div class="item-input">
-                                <input type="number" min="1" name="oftQuantidade" id="oftQuantidade" pattern="^\d*[0-9](\.\d*[0-9])?$" placeholder="Quantidade">
+                                <input type="number" min="1" max="999" name="oftQuantidade" id="oftQuantidade" pattern="^\d*[0-9](\.\d*[0-9])?$" placeholder="Quantidade">
                             </div>
                         </div>
                     </div>
