--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -8,6 +8,16 @@ img {
 }
 
 
+/* F7 ALTERADO*/
+
+.range-slider input[type="range"]::-webkit-slider-thumb {
+    border: 1px solid silver;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+}
+
+
 /*ALTERADO PARA CLASSE PARA UTILIZAR EM MAIS DE UM LUGAR NA APLICAÇÃO*/
 
 .canvasMapa {
