recebendo ofertas e exibindo na tela, falta acertar quais campos serão exibidos

--- a/hortapp/www/views/oferta/ofertas.html
+++ b/hortapp/www/views/oferta/ofertas.html
@@ -6,13 +6,13 @@
                 <span>Voltar</span>
             </a>
         </div>
-        <!-- <div class="center sliding">Nova Oferta</div>
+        <div class="center sliding">Nova Oferta</div>
         <div class="right sliding">
-            <a href="#" data-panel="left" class="link" id="oftSalvar">
+            <a href="views/oferta/novaOferta.html" data-panel="left" class="link">
                 <i class="fa fa-check" aria-hidden="true"></i>
-                <span>Salvar</span>
+                <span>Nova Oferta</span>
             </a>
-        </div> -->
+        </div>
     </div>
 </div>
 
