--- a/hortapp/www/views/oferta/ofertas.html
+++ b/hortapp/www/views/oferta/ofertas.html
@@ -6,11 +6,11 @@
                 <span>Voltar</span>
             </a>
         </div>
-        <div class="center sliding">Nova Oferta</div>
+        <div class="center sliding">Preferências</div>
         <div class="right sliding">
-            <a href="views/oferta/novaOferta.html" data-panel="left" class="link">
+            <a href="#" data-panel="left" class="link">
                 <i class="fa fa-check" aria-hidden="true"></i>
-                <span>Nova Oferta</span>
+                <span>Preferências</span>
             </a>
         </div>
     </div>
