colocanco as ofertas na tela inicial, acredito que precisa uma page separa mesmo para a index

--- a/hortapp/www/views/oferta/minhasOfertas.html
+++ b/hortapp/www/views/oferta/minhasOfertas.html
@@ -6,7 +6,7 @@
                 <span>Voltar</span>
             </a>
         </div>
-        <div class="center sliding">Nova Oferta</div>
+        <div class="center sliding">Minhas Ofertas</div>
         <div class="right sliding">
             <a href="views/oferta/novaOferta.html" data-panel="left" class="link">
                 <i class="fa fa-check" aria-hidden="true"></i>
