--- a/hortapp/www/views/oferta/ofertas.html
+++ b/hortapp/www/views/oferta/ofertas.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<!-- <div class="navbar">
     <div class="navbar-inner">
         <div class="left sliding">
             <a href="#" class="back link">
@@ -20,20 +20,7 @@
     <div class="page-content">
         <div class="list-block media-list">
             <ul id="listaOfertas">
-                <!-- <li>
-                    <a href="#" class="item-link item-content">
-                        <div class="item-media"><img src="..." width="80"></div>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title">Yellow Submarine</div>
-                                <div class="item-after">$15</div>
-                            </div>
-                            <div class="item-subtitle">Beatles</div>
-                            <div class="item-text">Lorem ipsum dolor sit amet...</div>
-                        </div>
-                    </a>
-                </li> -->
             </ul>
         </div>
     </div>
-</div>
+</div> -->
