--- a/hortapp/www/css/my-app.css
+++ b/hortapp/www/css/my-app.css
@@ -1,3 +1,13 @@
+.infinite-scroll-preloader {
+  margin-top:-20px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.infinite-scroll-preloader .preloader {
+  width:34px;
+  height:34px;
+}
+
 img {
     max-width: 100%;
     height: auto;
