--- a/hortapp/www/views/oferta/ofertas.html
+++ b/hortapp/www/views/oferta/ofertas.html
@@ -1,4 +1,4 @@
-<!-- <div class="navbar">
+<div class="navbar">
     <div class="navbar-inner">
         <div class="left sliding">
             <a href="#" class="back link">
@@ -6,7 +6,7 @@
                 <span>Voltar</span>
             </a>
         </div>
-        <div class="center sliding">Preferências</div>
+        <div class="center sliding">Todas as Ofertas</div>
         <div class="right sliding">
             <a href="#" data-panel="left" class="link">
                 <i class="fa fa-check" aria-hidden="true"></i>
@@ -17,10 +17,14 @@
 </div>
 
 <div class="page" data-page="ofertas">
-    <div class="page-content">
+    <div class="page-content infinite-scroll">
         <div class="list-block media-list">
             <ul id="listaOfertas">
             </ul>
         </div>
+        <!-- Preloader -->
+        <div class="infinite-scroll-preloader">
+            <div class="preloader"></div>
+        </div>
     </div>
-</div> -->
+</div>
