get minhas ofertas, incluido todas as ofertas já no início do app, problema quando faz logout, parece que o app loga novamente

--- a/hortapp/www/views/oferta/minhasOfertas.html
+++ b/hortapp/www/views/oferta/minhasOfertas.html
@@ -17,7 +17,11 @@
 </div>
 
 <div class="page" data-page="minhasOfertas">
-    <div class="page-content">
+    <div class="page-content" id="pullToRefreshMinhasOfertas">
+      <div class="pull-to-refresh-layer">
+          <div class="preloader"></div>
+          <div class="pull-to-refresh-arrow"></div>
+      </div>
         <div class="list-block media-list">
             <ul id="listaMinhasOfertas">
                 <!-- <li>
