--- a/hortapp/www/views/oferta/ofertas.html
+++ b/hortapp/www/views/oferta/ofertas.html
@@ -1,16 +1,16 @@
 <div class="navbar">
     <div class="navbar-inner">
-        <div class="left sliding">
+        <!-- <div class="left sliding">
             <a href="#" class="back link">
                 <i class="icon icon-back"></i>
                 <span>Voltar</span>
             </a>
-        </div>
-        <div class="center sliding">Todas as Ofertas</div>
+        </div> -->
+        <div class="left sliding">HortApp - Ofertas</div>
         <div class="right sliding">
-            <a href="views/usuario/preferencias.html" data-panel="left" class="link">
-                <i class="fa fa-check" aria-hidden="true"></i>
-                <span>Preferências</span>
+            <a href="#" data-panel="left" class="link open-panel">
+                <i class="icon icon-bars"></i>
+                <span>Menu</span>
             </a>
         </div>
     </div>
@@ -26,9 +26,5 @@
             <ul id="listaOfertas">
             </ul>
         </div>
-        <!-- Preloader -->
-        <!-- <div class="infinite-scroll-preloader">
-            <div class="preloader"></div>
-        </div> -->
     </div>
 </div>
