Criando detalhes das ofertas

--- a/hortapp/www/views/oferta/ofertaDetalhes.html
+++ b/hortapp/www/views/oferta/ofertaDetalhes.html
@@ -17,5 +17,32 @@
 </div>
 
 <div class="page" data-page="ofertaDetalhes">
-  <div id=""></div>
+    <div class="page-content" id="">
+        <div class="content-block">
+            <div class="row">
+                <div class="col-70">
+                    Teste
+                </div>
+                <div class="col-30">
+                    <img src="" alt="" id="imgMiniatura" />
+                </div>
+            </div>
+        </div>
+
+        <div class="card facebook-card">
+            <div class="card-header no-border">
+                <div class="facebook-avatar"><img src="" width="34" height="34" id="usuarioAvatar"></div>
+                <div class="facebook-name"></div>
+                <div class="facebook-date"><a href="mailto:mateus.zanini.gl@gmail.com">mateus.zanini.gl@gmail.com</a></div>
+            </div>
+            <div class="card-content"><img src="..." width="100%"></div>
+            <div class="card-footer no-border">
+                <a href="#" class="link">Like</a>
+                <a href="#" class="link">Comment</a>
+                <a href="#" class="link">Share</a>
+            </div>
+        </div>
+
+
+    </div>
 </div>
