Mostrando endereço no mapa na tela de detalhes da oferta

--- a/hortapp/www/views/oferta/ofertaDetalhes.html
+++ b/hortapp/www/views/oferta/ofertaDetalhes.html
@@ -23,7 +23,7 @@
             <div class="card-header no-border">
                 <div class="facebook-avatar"><img src="" width="34" height="34" id="usuarioAvatar"></div>
                 <div class="facebook-name"></div>
-                <div class="facebook-date"><a href="mailto:mateus.zanini.gl@gmail.com">mateus.zanini.gl@gmail.com</a></div>
+                <div class="facebook-date"></div>
             </div>
             <div class="card-content">
                 <div class="list-block">
@@ -78,8 +78,10 @@
                             </div>
                         </li>
                         <div class="content-block">
-                            <img src="https://social.msdn.microsoft.com/Forums/getfile/166999" alt="" />
+                            <div class="canvasMapa" id="mapCanvasOferta"></div>
+                            <div class="usuLocalizacao color-blue" id="usuLocalizacaoOferta"></div>
                         </div>
+
 
                     </ul>
                 </div>
