--- a/hortapp/www/views/oferta/editarOferta.html
+++ b/hortapp/www/views/oferta/editarOferta.html
@@ -66,7 +66,7 @@
                   </div>
               </li>
               <!-- SELEÇÃO DE ENDEREÇO -->
-              <!-- <li>
+              <li>
                   <div class="item-content">
                       <div class="item-inner semBorda">
                           <div class="item-title label">Usar meu endereço</div>
@@ -80,7 +80,7 @@
                   </div> -->
 
                   <!-- DIV COM CONTEUDO DO ENDEREÇO PROPRIO -->
-                  <!-- <div class="content-block hide enderecoProprio">
+                  <div class="content-block hide enderecoProprio">
 
                       <div class="item-content">
                           <div class="item-inner semBorda">
@@ -190,7 +190,7 @@
                           </ul>
                       </div>
                   </div>
-              </li> -->
+              </li>
               <!--FIM DO ENDEREÇO  -->
               <li>
 
