Realizados ajustes de layout

--- a/hortapp/www/views/oferta/ofertas.html
+++ b/hortapp/www/views/oferta/ofertas.html
@@ -1,12 +1,12 @@
 <div class="navbar">
     <div class="navbar-inner">
-        <!-- <div class="left sliding">
+        <div class="left sliding">
             <a href="#" class="back link">
                 <i class="icon icon-back"></i>
                 <span>Voltar</span>
             </a>
-        </div> -->
-        <div class="left sliding">HortApp - Ofertas</div>
+        </div>
+        <div class="left sliding">Ofertas</div>
         <div class="right sliding">
             <a href="#" data-panel="left" class="link open-panel">
                 <i class="icon icon-bars"></i>
