--- a/hortapp/www/views/usuario/meuPerfil.html
+++ b/hortapp/www/views/usuario/meuPerfil.html
@@ -21,7 +21,7 @@
         <form id="usuFormulario" class="list-block">
             <div class="list-block accordion-list">
                 <ul>
-                    <li class="accordion-item">
+                    <li class="accordion-item accordion-item-expanded">
                         <a href="#" class="item-content item-link">
                             <div class="item-inner color-blue">
                                 <div class="item-title"><i class="fa fa-user" aria-hidden="true"></i> Contato</div>
