--- a/hortapp/www/views/oferta/minhasOfertas.html
+++ b/hortapp/www/views/oferta/minhasOfertas.html
@@ -9,7 +9,7 @@
         <div class="center sliding">Minhas Ofertas</div>
         <div class="right sliding">
             <a href="views/oferta/novaOferta.html" data-panel="left" class="link">
-                <i class="fa fa-check" aria-hidden="true"></i>
+                <i class="fa fa-plus" aria-hidden="true"></i>
                 <span>Nova Oferta</span>
             </a>
         </div>
